--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,3 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -18,7 +11,7 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-@keyframes logo-spin {
+/* @keyframes logo-spin {
   from {
     transform: rotate(0deg);
   }
@@ -31,12 +24,74 @@
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
+} */
+@font-face {
+  font-family: 'cas-mono';
+  src: url('/font/Cascadia.ttf');
+}
+@font-face {
+  font-family: 'stm-reg';
+  src: url('/font/ShareTechMono-Regular.ttf');
+}
+.font-casmono{
+  font-family: 'cas-mono';
+}
+.font-stmreg{
+  font-family: 'stm-reg';
+}
+.text-app-red{
+  color: #440100;
+
+}
+.text-app-blue{
+  color: #5f9cc8;
+}
+.text-app-blue:hover{
+  color: black;
+}
+.text-app-grey{
+  color: #ABBDC2;
+}
+.text-app-black{
+  color: #202020;
+}
+.text-app-yellow{
+  color: #ffde6b;
 }
 
-.card {
-  padding: 2em;
+.bg-app-red{
+  background-color: #440100;
+
+}
+.bg-app-blue{
+  background-color: #5f9cc8;
+}
+.bg-app-grey{
+  background-color: #ABBDC2;
+}
+.bg-app-yellow{
+  background-color: #ffde6b;
 }
 
-.read-the-docs {
-  color: #888;
+.app-button{
+  border-radius: 15%;
+  cursor: pointer;
+  transition-duration: 0.4s;
+}
+.app-button-flat{
+  cursor: pointer;
+  transition-duration: 0.4s;
+}
+.app-button:hover{
+  background-color: white;
+  color: black;
+  outline: black solid 2px;
+}
+.app-button-flat:hover{
+  background-color: white;
+  color: black;
+  outline: black solid 2px;
+}
+.invalid{
+  outline: red solid 3px;
 }
