Added projects to page, experience changes

--- a/client/src/tailwind.css
+++ b/client/src/tailwind.css
@@ -1114,6 +1114,10 @@ video {
   text-transform: uppercase;
 }
 
+.lowercase {
+  text-transform: lowercase;
+}
+
 .leading-5 {
   line-height: 1.25rem;
 }
