--- a/client/src/tailwind.css
+++ b/client/src/tailwind.css
@@ -953,19 +953,18 @@ video {
   border-color: transparent;
 }
 
-.bg-slate-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+.bg-juni-300 {
+  background-color: FF7356;
 }
 
-.bg-slate-600 {
+.bg-juni-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
+  background-color: rgb(0 85 90 / var(--tw-bg-opacity));
 }
 
-.bg-slate-900 {
+.bg-juni-600 {
   --tw-bg-opacity: 1;
-  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+  background-color: rgb(2 60 64 / var(--tw-bg-opacity));
 }
 
 .bg-slate-900\/75 {
@@ -1150,6 +1149,35 @@ video {
   letter-spacing: 0.1em;
 }
 
+.text-citrus-500 {
+  --tw-text-opacity: 1;
+  color: rgb(241 211 2 / var(--tw-text-opacity));
+}
+
+.text-juni-100 {
+  --tw-text-opacity: 1;
+  color: rgb(244 243 238 / var(--tw-text-opacity));
+}
+
+.text-juni-200 {
+  --tw-text-opacity: 1;
+  color: rgb(255 115 86 / var(--tw-text-opacity));
+}
+
+.text-juni-300 {
+  color: FF7356;
+}
+
+.text-juni-400 {
+  --tw-text-opacity: 1;
+  color: rgb(121 78 242 / var(--tw-text-opacity));
+}
+
+.text-juni-500 {
+  --tw-text-opacity: 1;
+  color: rgb(0 85 90 / var(--tw-text-opacity));
+}
+
 .text-slate-200 {
   --tw-text-opacity: 1;
   color: rgb(226 232 240 / var(--tw-text-opacity));
@@ -1209,48 +1237,49 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.selection\:bg-teal-300 *::-moz-selection {
-  --tw-bg-opacity: 1;
-  background-color: rgb(94 234 212 / var(--tw-bg-opacity));
+.selection\:bg-juni-300 *::-moz-selection {
+  background-color: FF7356;
 }
 
-.selection\:bg-teal-300 *::selection {
-  --tw-bg-opacity: 1;
-  background-color: rgb(94 234 212 / var(--tw-bg-opacity));
+.selection\:bg-juni-300 *::selection {
+  background-color: FF7356;
 }
 
-.selection\:text-teal-900 *::-moz-selection {
+.selection\:text-juni-500 *::-moz-selection {
   --tw-text-opacity: 1;
-  color: rgb(19 78 74 / var(--tw-text-opacity));
+  color: rgb(0 85 90 / var(--tw-text-opacity));
 }
 
-.selection\:text-teal-900 *::selection {
+.selection\:text-juni-500 *::selection {
   --tw-text-opacity: 1;
-  color: rgb(19 78 74 / var(--tw-text-opacity));
+  color: rgb(0 85 90 / var(--tw-text-opacity));
 }
 
-.selection\:bg-teal-300::-moz-selection {
-  --tw-bg-opacity: 1;
-  background-color: rgb(94 234 212 / var(--tw-bg-opacity));
+.selection\:bg-juni-300::-moz-selection {
+  background-color: FF7356;
 }
 
-.selection\:bg-teal-300::selection {
-  --tw-bg-opacity: 1;
-  background-color: rgb(94 234 212 / var(--tw-bg-opacity));
+.selection\:bg-juni-300::selection {
+  background-color: FF7356;
 }
 
-.selection\:text-teal-900::-moz-selection {
+.selection\:text-juni-500::-moz-selection {
   --tw-text-opacity: 1;
-  color: rgb(19 78 74 / var(--tw-text-opacity));
+  color: rgb(0 85 90 / var(--tw-text-opacity));
 }
 
-.selection\:text-teal-900::selection {
+.selection\:text-juni-500::selection {
   --tw-text-opacity: 1;
-  color: rgb(19 78 74 / var(--tw-text-opacity));
+  color: rgb(0 85 90 / var(--tw-text-opacity));
 }
 
 .last\:border-none:last-child {
   border-style: none;
+}
+
+.hover\:text-pink-500:hover {
+  --tw-text-opacity: 1;
+  color: rgb(236 72 153 / var(--tw-text-opacity));
 }
 
 .hover\:text-slate-200:hover {
@@ -1261,6 +1290,11 @@ video {
 .hover\:text-teal-300:hover {
   --tw-text-opacity: 1;
   color: rgb(94 234 212 / var(--tw-text-opacity));
+}
+
+.focus-visible\:text-flint-700:focus-visible {
+  --tw-text-opacity: 1;
+  color: rgb(66 66 77 / var(--tw-text-opacity));
 }
 
 .focus-visible\:text-teal-300:focus-visible {
@@ -1306,14 +1340,14 @@ video {
   border-color: rgb(94 234 212 / var(--tw-border-opacity));
 }
 
-.group:hover .group-hover\:bg-slate-200 {
+.group:hover .group-hover\:bg-juni-100 {
   --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+  background-color: rgb(244 243 238 / var(--tw-bg-opacity));
 }
 
-.group:hover .group-hover\:text-slate-200 {
+.group:hover .group-hover\:text-juni-500 {
   --tw-text-opacity: 1;
-  color: rgb(226 232 240 / var(--tw-text-opacity));
+  color: rgb(0 85 90 / var(--tw-text-opacity));
 }
 
 .group\/link:focus-visible .group-focus-visible\/link\:translate-x-1 {
@@ -1321,9 +1355,9 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.group:focus-visible .group-focus-visible\:text-slate-200 {
+.group:focus-visible .group-focus-visible\:text-juni-100 {
   --tw-text-opacity: 1;
-  color: rgb(226 232 240 / var(--tw-text-opacity));
+  color: rgb(244 243 238 / var(--tw-text-opacity));
 }
 
 @media (prefers-reduced-motion: reduce) {
